<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/opt_Menu_pin"
        android:icon="@drawable/ic_action_key_icon"
        android:orderInCategory="2"
        android:title="@string/opt_Menu_pin" />
    <group>
        <item
            android:id="@+id/opt_Menu_recording"
            android:icon="@drawable/ic_recording"
            android:orderInCategory="4"
            android:title="@string/opt_Menu_recording"
            android:visible="true" />
        <item
            android:id="@+id/opt_Menu_Audio_Settings"
            android:icon="@drawable/ic_action_volume_on"
            android:orderInCategory="5"
            android:title="@string/opt_Menu_Audio_Settings" />
        <item
            android:id="@+id/opt_Menu_Track_Inbound_Call"
            android:orderInCategory="6"
            android:title="@string/opt_Menu_Track_Inbound_Call" />
        <item
            android:id="@+id/opt_Menu_Ping_Test"
            android:orderInCategory="7"
            android:title="@string/opt_Menu_Ping_Test"
            android:visible="true" />
    </group>
</menu>