<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startup_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
           
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/starup_imv_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/startup_activity_logo_height"            
            android:contentDescription="@string/app_name"
            android:src="@drawable/tentacle_t" />

        <ProgressBar
            android:id="@+id/startup_pb_appregistor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             />
         
         <TextView
            android:id="@+id/startup_txt_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="50dp"
            
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
         
         <Button
            android:id="@+id/startup_btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_design"
            android:text="@string/retry"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone"
             />

        <Button
            android:id="@+id/startup_btn_logintentacle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/view_design"
            android:text="@string/tentacle_login"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/startup_btn_viewcall"         
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/view_design"
            android:text="@string/sync_menu"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/startup_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="50dp"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#008658"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>